Fix pie chart and color on empty dark mode

--- a/src/themes/default/ids-theme-default-dark.scss
+++ b/src/themes/default/ids-theme-default-dark.scss
@@ -252,7 +252,7 @@
   --ids-expandable-area-border-bottom: 1px solid var(--ids-color-neutral-50);
 
   // Empty Message
-  --ids-empty-message-icon-color: var(--ids-color-neutral-20);
+  --ids-empty-message-icon-color: var(--ids-color-neutral-60);
   --ids-empty-message-icon-fill: transparent;
 
   // Headers
